Z-index issue

--- a/themes/dsq/style.less
+++ b/themes/dsq/style.less
@@ -303,6 +303,12 @@ blockquote
 	}
 }
 
+#main-header
+{
+	position: relative;
+	z-index: 999;
+}
+
 /* Breakpoints */
 /* iPads (portrait and landscape) ----------- */
 @media only screen 
